--- a/script.html
+++ b/script.html
@@ -49,11 +49,13 @@
             let computerScore = 0;
     
             for(i = 0; i < 5; i++){
+                alert(`Player Score: ${playerScore} Computer Score: ${computerScore}`);
                 playerSelection = prompt("Please enter your choice", "").toLowerCase();
                 computerSelection = computerPlay();
                 playRound();
-                console.log(playerScore);
-                console.log(computerScore);
+                alert(playRound(playerSelection, computerSelection));
+                console.log(`Player Score: ${playerScore}`);
+                console.log(`Computer Score: ${computerScore}`);
                 console.log(playRound(playerSelection, computerSelection));
                 if(result === `You win! ${playerSelection} beats ${computerSelection}`){
                     playerScore++;
@@ -63,20 +65,23 @@
                 }
             }
             if(playerScore > computerScore){
+                alert("You win the game!");
                 console.log("..........");
                 console.log("Game Over!");
                 console.log("..........");
                 console.log("You win!");
             } else if (playerScore < computerScore){
+                alert("You lose the game! ");
                 console.log("..........");
                 console.log("Game Over!");
                 console.log("..........");
                 console.log("You lose!");
             } else {
+                alert("The game is a draw!");
                 console.log("..........");
                 console.log("Game Over!")
                 console.log("..........");
-                console.log("You drew!");
+                console.log("Draw!");
             }
             
         }
