--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ROCK PAPER SCISSORS</title>
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css"></style>
+
 </head>
 <body>
     <div id="buttons">
@@ -17,6 +18,9 @@
     
     <div id="results">
 
+    </div>
+    <div id="score">
+        <h3><u>Score Board</u></h3>
     </div>
 </body>
 </html>
