--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <title>ROCK PAPER SCISSORS</title>
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css"></style>
-
-</head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 <body>
     <div id="buttons">
-        <button id="rock">Rock</button>
-        <button id="paper">Paper</button>
-        <button id="scissors">Scissors</button>    
+        <button id="rock"><i class="fa-solid fa-hand-back-fist fa-10x"></i></button>
+        <button id="paper"><i class="fa-solid fa-hand fa-10x"></i></button>
+        <button id="scissors"><i class="fa-solid fa-hand-scissors fa-10x"></i></button>    
     </div>
     
     <div id="results">
