--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     </div>
     <div id="score">
-        <h3><u>Score Board</u></h3>
+        <h3><u>Score Log</u></h3>
     </div>
 </body>
 </html>
